@@ -18,17 +18,19 @@ class BasicForcesAndMotionModule(frame: JFrame,
                                  clock: ScalaClock,
                                  name: String,
                                  coordinateSystemFeaturesEnabled: Boolean,
+                                 showObjectSelectionNode: Boolean,
                                  useObjectComboBox: Boolean,
                                  showAppliedForceSlider: Boolean,
                                  defaultBeadPosition: Double,
                                  pausedOnReset: Boolean,
                                  initialAngle: Double,
-                                 modelOffsetY: Double)
+                                 modelOffsetY: Double,
+                                 showFrictionControl: Boolean)
         extends AbstractRampModule(frame, clock, name, defaultBeadPosition, pausedOnReset, initialAngle) {
-  val canvas = new BasicForcesAndMotionCanvas(rampModel, coordinateSystemModel, fbdModel, vectorViewModel, frame, !useObjectComboBox, showAppliedForceSlider, initialAngle != 0.0, modelOffsetY)
+  val canvas = new BasicForcesAndMotionCanvas(rampModel, coordinateSystemModel, fbdModel, vectorViewModel, frame, showObjectSelectionNode, showAppliedForceSlider, initialAngle != 0.0, modelOffsetY)
   setSimulationPanel(canvas)
   val controlPanel = new RampControlPanel(rampModel, wordModel, fbdModel, coordinateSystemModel, vectorViewModel,
-    resetRampModule, coordinateSystemFeaturesEnabled, useObjectComboBox, rampModel, false)
+    resetRampModule, coordinateSystemFeaturesEnabled, useObjectComboBox, rampModel, false, showFrictionControl)
   setControlPanel(controlPanel)
   setClockControlPanel(new RecordModelControlPanel(rampModel, canvas, () => new PlaybackSpeedSlider(rampModel), Color.blue, 20))
 }
@@ -41,9 +43,9 @@ class BasicForcesAndMotionCanvas(model: RampModel, coordinateSystemModel: Coordi
   override def addHeightAndAngleIndicators() = {}
 }
 
-class IntroModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.intro.title".translate, false, false, true, -6, false, 0.0, 0.0)
-class FrictionModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.friction.title".translate, false, true, true, -6, false, 0.0, 0.0) {
-  val frictionPlayAreaControlPanel = new PSwing(new FrictionPlayAreaControlPanel)
+class IntroModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.intro.title".translate, false, true, false, true, -6, false, 0.0, 0.0,true)
+class FrictionModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.friction.title".translate, false, false, false, true, -6, false, 0.0, 0.0,false) {
+  val frictionPlayAreaControlPanel = new PSwing(new FrictionPlayAreaControlPanel(rampModel.bead))
   canvas.addScreenChild(frictionPlayAreaControlPanel)
   def updateFrictionControl() = {
     val s = canvas.getScale * 1.5
@@ -58,9 +60,10 @@ class FrictionModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMot
   })
 
   updateFrictionControl()
+  rampModel.frictionless = false
 }
-class GraphingModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.graphing.title".translate, false, false, false, -6, false, 0.0, 0.0)
-class RobotMovingCompany1DModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.robot-moving-company.title".translate, false, false, false, -6, false, 0.0, 0.0)
+class GraphingModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.graphing.title".translate, false, true, false, false, -6, false, 0.0, 0.0,true)
+class RobotMovingCompany1DModule(frame: JFrame, clock: ScalaClock) extends BasicForcesAndMotionModule(frame, clock, "forces-and-friction.module.robot-moving-company.title".translate, false, false, false, false, -6, false, 0.0, 0.0,true)
 
 class ForcesAndMotionApplication(config: PhetApplicationConfig) extends PiccoloPhetApplication(config) {
   def newClock = new ScalaClock(RampDefaults.DELAY, RampDefaults.DT_DEFAULT)
