@@ -1,13 +1,19 @@
 package edu.colorado.phet.therampscala.swing
 
 
-import common.phetcommon.view.controls.valuecontrol.LinearValueControl
+import common.phetcommon.view.controls.valuecontrol.{ILayoutStrategy, DefaultLayoutStrategy, LinearValueControl}
 import javax.swing.event.{ChangeListener, ChangeEvent}
 
 class ScalaValueControl(min: Double, max: Double, name: String, decimalFormat: String, units: String,
                         private var _getter: () => Double,
                         private var _setter: Double => Unit,
-                        addListener: (() => Unit) => Unit) extends LinearValueControl(min, max, name, decimalFormat, units) {
+                        addListener: (() => Unit) => Unit,
+                        layoutStrategy:ILayoutStrategy) extends LinearValueControl(min, max, name, decimalFormat, units,layoutStrategy) {
+
+  def this(min: Double, max: Double, name: String, decimalFormat: String, units: String,
+                        _getter: () => Double,
+                        _setter: Double => Unit,
+                        addListener: (() => Unit) => Unit) = this(min,max,name,decimalFormat,units,_getter,_setter,addListener,new DefaultLayoutStrategy)
   addListener(update)
   update()
   addChangeListener(new ChangeListener {
